--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.0.0",
     "jest": "^29.7.0"
   }
