--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on: [push, pull_request]
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build-test-release:
     runs-on: ubuntu-latest
@@ -21,7 +25,7 @@ jobs:
           npm i
           npm run test
       - name: Create Release
-        if: success()
+        if: success() && github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ github.run_number }}
