--- a/.github/workflows/ci_ssh.yml
+++ b/.github/workflows/ci_ssh.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run Tests
         run: |
-          cd backend && npm ci && npm test
-          cd ../frontend && npm ci && npm test
+          cd backend && npm i && npm run test
+          cd ../frontend && npm i && npm run test
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
