--- a/.github/workflows/ci_ssh.yml
+++ b/.github/workflows/ci_ssh.yml
@@ -20,7 +20,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /var/www/todo
+            cd /var/www/todolist
             git pull
-            cd backend && npm ci && pm2 restart backend || pm2 start index.js --name backend
-            cd ../frontend && npm ci && npm run build && pm2 restart frontend || pm2 start npm --name frontend -- start
+            cd backend && npm i && pm2 restart backend || pm2 start index.js --name backend
+            cd ../frontend && npm i && npm run build && pm2 restart frontend || pm2 start npm --name frontend -- start
